Fix a crash in xScanner ... at least partially

--- a/xScanner/xscanner.vcxproj
+++ b/xScanner/xscanner.vcxproj
@@ -52,6 +52,7 @@
     <SpectreMitigation>false</SpectreMitigation>
     <DefineConstants>
     </DefineConstants>
+    <EnableASAN>false</EnableASAN>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
