--- a/xLights/xLights.cbp
+++ b/xLights/xLights.cbp
@@ -413,6 +413,8 @@
 		<Unit filename="SevenSegmentDialog.h" />
 		<Unit filename="ShaderDownloadDialog.cpp" />
 		<Unit filename="ShaderDownloadDialog.h" />
+		<Unit filename="ShowFolderSearchDialog.cpp" />
+		<Unit filename="ShowFolderSearchDialog.h" />
 		<Unit filename="SpecialOptions.cpp" />
 		<Unit filename="SpecialOptions.h" />
 		<Unit filename="SplashDialog.cpp" />
@@ -1285,6 +1287,7 @@
 		<Unit filename="wxsmith/ShapePanel.wxs" />
 		<Unit filename="wxsmith/ShimmerPanel.wxs" />
 		<Unit filename="wxsmith/ShockwavePanel.wxs" />
+		<Unit filename="wxsmith/ShowFolderSearchDialog.wxs" />
 		<Unit filename="wxsmith/SingleStrandPanel.wxs" />
 		<Unit filename="wxsmith/SkullConfigDialog.wxs" />
 		<Unit filename="wxsmith/SnowflakesPanel.wxs" />
@@ -1547,6 +1550,7 @@
 					<wxDialog wxs="wxsmith/AutoLabelDialog.wxs" src="AutoLabelDialog.cpp" hdr="AutoLabelDialog.h" fwddecl="0" i18n="1" name="AutoLabelDialog" language="CPP" />
 					<wxDialog wxs="wxsmith/EditAliasesDialog.wxs" src="EditAliasesDialog.cpp" hdr="EditAliasesDialog.h" fwddecl="0" i18n="1" name="EditAliasesDialog" language="CPP" />
 					<wxDialog wxs="wxsmith/EditSubmodelAliasesDialog.wxs" src="EditSubmodelAliasesDialog.cpp" hdr="EditSubmodelAliasesDialog.h" fwddecl="0" i18n="1" name="EditSubmodelAliasesDialog" language="CPP" />
+					<wxDialog wxs="wxsmith/ShowFolderSearchDialog.wxs" src="ShowFolderSearchDialog.cpp" hdr="ShowFolderSearchDialog.h" fwddecl="0" i18n="1" name="ShowFolderSearchDialog" language="CPP" />
 				</resources>
 			</wxsmith>
 			<code_completion />
