--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ xLights/xLights_l4cpp.log
 .objs
 wxWidgets*
 log4cpp*
-./ispc*
+ispc-*
+ispc
 xLights/xLights.VC.db
 lib/linux/libliquidfun.a
 *.opensdf
