--- a/xLights/xLights.cbp
+++ b/xLights/xLights.cbp
@@ -409,8 +409,6 @@
 		<Unit filename="SequenceVideoPreview.h" />
 		<Unit filename="SequenceViewManager.cpp" />
 		<Unit filename="SequenceViewManager.h" />
-		<Unit filename="ServicesPanel.cpp" />
-		<Unit filename="ServicesPanel.h" />
 		<Unit filename="SevenSegmentDialog.cpp" />
 		<Unit filename="SevenSegmentDialog.h" />
 		<Unit filename="ShaderDownloadDialog.cpp" />
@@ -1063,6 +1061,8 @@
 		<Unit filename="preferences/OutputSettingsPanel.h" />
 		<Unit filename="preferences/RandomEffectsSettingsPanel.cpp" />
 		<Unit filename="preferences/RandomEffectsSettingsPanel.h" />
+        <Unit filename="preferences/ServicesPanel.cpp" />
+        <Unit filename="preferences/ServicesPanel.h" />
 		<Unit filename="preferences/SequenceFileSettingsPanel.cpp" />
 		<Unit filename="preferences/SequenceFileSettingsPanel.h" />
 		<Unit filename="preferences/ViewSettingsPanel.cpp" />
@@ -1566,7 +1566,7 @@
 					<wxDialog wxs="wxsmith/EditAliasesDialog.wxs" src="EditAliasesDialog.cpp" hdr="EditAliasesDialog.h" fwddecl="0" i18n="1" name="EditAliasesDialog" language="CPP" />
 					<wxDialog wxs="wxsmith/EditSubmodelAliasesDialog.wxs" src="EditSubmodelAliasesDialog.cpp" hdr="EditSubmodelAliasesDialog.h" fwddecl="0" i18n="1" name="EditSubmodelAliasesDialog" language="CPP" />
 					<wxDialog wxs="wxsmith/ShowFolderSearchDialog.wxs" src="ShowFolderSearchDialog.cpp" hdr="ShowFolderSearchDialog.h" fwddecl="0" i18n="1" name="ShowFolderSearchDialog" language="CPP" />
-					<wxPanel wxs="wxsmith/ServicesPanel.wxs" src="ServicesPanel.cpp" hdr="ServicesPanel.h" fwddecl="0" i18n="1" name="ServicesPanel" language="CPP" />
+					<wxPanel wxs="wxsmith/ServicesPanel.wxs" src="preferences/ServicesPanel.cpp" hdr="preferences/ServicesPanel.h" fwddecl="0" i18n="1" name="ServicesPanel" language="CPP" />
 				</resources>
 			</wxsmith>
 		</Extensions>
